Unable to select items using only the arrow keys #34936

Closed
opened 2013-04-09 14:58:33 +02:00 by Dolf Veenvliet · 8 comments
Member

%%%--- Operating System, Graphics card ---
win7 64bit Geforce 560

- Blender version with error, and version that worked ---

Anything since 2.5

- Short description of error ---

if I open a menu where I want to scroll to another item using the arrow keys only... the "selection" keeps jumping back to the position of the mouse cursor.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the recent files menu with Ctrl+shift+O and without using the mouse... use the arrow keys to select an item.

Or... Open the search menu with Space bar... move your mouse cursor to highlight an item... then use the arrow keys to select a different item.

In both cases the highlight jumps back to where the mouse is frequently, though not consistently.

It is hard to recreate.... On my system with a pen + mouse... it does not happen immediately after a reboot... but soon starts happening every time... On my older laptop with a trackpad it does not happen at all. Though Sparrow_ tested it on his laptop with trackpad + mouse... and it happened for him as well as soon as he enabled his trackpad.

%%%

%%%--- Operating System, Graphics card --- win7 64bit Geforce 560 - Blender version with error, and version that worked --- Anything since 2.5 - Short description of error --- if I open a menu where I want to scroll to another item using the arrow keys only... the "selection" keeps jumping back to the position of the mouse cursor. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the recent files menu with Ctrl+shift+O and without using the mouse... use the arrow keys to select an item. Or... Open the search menu with Space bar... move your mouse cursor to highlight an item... then use the arrow keys to select a different item. In both cases the highlight jumps back to where the mouse is frequently, though not consistently. It is hard to recreate.... On my system with a pen + mouse... it does not happen immediately after a reboot... but soon starts happening every time... On my older laptop with a trackpad it does not happen at all. Though Sparrow_ tested it on his laptop with trackpad + mouse... and it happened for him as well as soon as he enabled his trackpad. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%I had it happening to be as soon as i activated my trackpad(mouse was connected at the same time),turning it of did not make it stop,nor did restaring blender.
I then went ahead and rebooted my pc and now i can´t make it happen again.

Im on a laptop, Vista 32-bit.%%%

%%%I had it happening to be as soon as i activated my trackpad(mouse was connected at the same time),turning it of did not make it stop,nor did restaring blender. I then went ahead and rebooted my pc and now i can´t make it happen again. Im on a laptop, Vista 32-bit.%%%

%%%Can't redo this on linux/X11 (55932).%%%

%%%Can't redo this on linux/X11 (55932).%%%

%%%It's not 100% a Bug, but I have the "issue" too that the Cursor Resets on slight mouse movements, which makes arrowkeys very hars to use.
(That explains why it cannot be replicated with a trackpad, where the mouse is totally inactive when not touched, while a mouse usually moves slightly when having it in the other hand while using the keyboard.%%%

%%%It's not 100% a Bug, but I have the "issue" too that the Cursor Resets on slight mouse movements, which makes arrowkeys very hars to use. (That explains why it cannot be replicated with a trackpad, where the mouse is totally inactive when not touched, while a mouse usually moves slightly when having it in the other hand while using the keyboard.%%%
Author
Member

%%%Campbell... yes we had Ton test it on Mac also... and he couldn't reproduce it either. It looks windows specific.

After more testing it also seems like it's not linked to an event that can be printed using blender with --debug-event (the arrow keys are generated, but the jump in selection happens between the arrow keys being hit, and seems to not use an event).

It does "look" as if it's not related to the arrow keys, but that somehow a "mouse move" is triggered. Putting my mouse upside down doesn't help... unplugging either mouse or pen tablet doesn't help either...%%%

%%%Campbell... yes we had Ton test it on Mac also... and he couldn't reproduce it either. It looks windows specific. After more testing it also seems like it's not linked to an event that can be printed using blender with --debug-event (the arrow keys are generated, but the jump in selection happens between the arrow keys being hit, and seems to not use an event). It does "look" as if it's not related to the arrow keys, but that somehow a "mouse move" is triggered. Putting my mouse upside down doesn't help... unplugging either mouse or pen tablet doesn't help either...%%%

%%%I think that if the item changes when the mouse moves slighty, that's intended behavior. As far as I can tell other OS X and Windows applications do the same, moving the mouse even 1 pixel has an influence there.

If the mouse isn't actually moving that's a bug, but I also can't redo the issue, on Windows and OS X with a trackpad + mouse.%%%

%%%I think that if the item changes when the mouse moves slighty, that's intended behavior. As far as I can tell other OS X and Windows applications do the same, moving the mouse even 1 pixel has an influence there. If the mouse isn't actually moving that's a bug, but I also can't redo the issue, on Windows and OS X with a trackpad + mouse.%%%

%%%fixed r55952.%%%

%%%fixed r55952.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34936
No description provided.