fix [#34936] Unable to select items using only the arrow keys

ignore small mouse motions for menu/search-box after using the keyboard to navigate.